<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navStudentList"
        android:icon="@drawable/ic_person_48px"
        android:title="@string/student_list"
        app:showAsAction="always" />
    <item
        android:id="@+id/navTeamMembers"
        android:icon="@drawable/ic_people_48px"
        android:title="@string/team_members"
        app:showAsAction="always" />
    <item
        android:id="@+id/navLogout"
        android:icon="@drawable/ic_logout_48px"
        android:title="@string/logout"
        app:showAsAction="always" />
    <item
        android:id="@+id/toggleDarkMode"
        android:icon="@drawable/ic_darkmode_48px"
        android:title="@string/toggle_dark_mode"
        app:showAsAction="always" />
</menu>